--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_keyboard_visibility: ^5.2.0
   cloud_firestore: ^3.1.10
+  firebase_core: ^1.14.0
 
 dev_dependencies:
   flutter_test:
