--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_keyboard_visibility: ^5.2.0
   cloud_firestore: ^3.1.10
   firebase_core: ^1.14.0
+  http: ^0.13.4
+  flutter_secure_storage: ^5.0.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
